--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -86,6 +86,12 @@
             <span id="toastMessage"></span>
         </div>
 
+        <!-- Thumbnail Preview Popup -->
+        <div id="previewPopup" class="preview-popup hidden">
+            <img id="previewImage" src="" alt="Preview">
+            <div id="previewInfo" class="preview-info"></div>
+        </div>
+
         <!-- Footer -->
         <footer class="footer">
             <p>Made by ArisaAkiyama</p>
